@@ -1,6 +1,9 @@
 # -*- coding: utf-8 -*-
 
 import sys
+from contextlib import contextmanager
+from progress import Infinite
+from progress.bar import Bar
 
 def print_enc(msg, out=None, linefeed_and_flush=True):
     if out is None:
@@ -15,3 +18,30 @@ def print_enc(msg, out=None, linefeed_and_flush=True):
     if linefeed_and_flush:
         out.write('\n')
         out.flush()
+
+
+class DownloadProgressBar(Bar):
+    message = 'Downloading'
+    suffix = '%(percent).1f%%'
+
+
+class DisabledProgressBar(Infinite):
+    pass
+
+
+@contextmanager
+def progress_bar(enabled, response_headers):
+    try:
+        total_length = int(response_headers.get('content-length'))
+    except ValueError:
+        total_length = 0
+
+    if enabled and total_length:
+        progress = DownloadProgressBar(max=total_length)
+    else:
+        progress = DisabledProgressBar()
+
+    try:
+        yield progress
+    finally:
+        progress.finish()
