@@ -4,8 +4,10 @@ Distributed under the GPL v3
 
 xx xxx 2017, Version 2.22
 
-- Extract all episodes on an Areena series page, not just the latest ones
+- Display a progress bar when downloading HTML5 videos
+- Get all episodes on an Areena series page, not just dozen latest
 - Partially fixed the --showepisodepage output on Elävä Arkisto
+- Reduce network traffic by downloading metadata in compressed format
 
 31 Jul 2017, Version 2.21
 
